--- a/src/irr/builtin/CMakeLists.txt
+++ b/src/irr/builtin/CMakeLists.txt
@@ -1,15 +1,22 @@
-function (set_builtin_resource_dependencies)
-  add_custom_target(builtin_resources
-   DEPENDS ${CMAKE_BINARY_DIR}/include/irr/builtin/builtinResources.h ${CMAKE_CURRENT_BINARY_DIR}/builtinResourceData.cpp
-   )
-  add_dependencies(Irrlicht builtin_resources)
-  add_dependencies(IrrlichtServer builtin_resources)
-
+function(irr_add_builtin_resources)
+  # generate files
+  foreach(X IN LISTS ARGV0)
+    list(APPEND builtin_dependencies_list  ${CMAKE_SOURCE_DIR}/include/${X})
+  endforeach()
+  add_custom_command(
+	OUTPUT "${CMAKE_BINARY_DIR}/include/irr/builtin/builtinResources.h" "${CMAKE_CURRENT_BINARY_DIR}/builtin/builtinResourceData.cpp"
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/builtin/builtinHeaderGen.py ${CMAKE_BINARY_DIR}/include/irr/builtin/builtinResources.h ${CMAKE_SOURCE_DIR}/include "${ARGV}"
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/builtin/builtinDataGen.py ${CMAKE_CURRENT_BINARY_DIR}/builtin/builtinResourceData.cpp ${CMAKE_SOURCE_DIR}/include "${ARGV}"
+    COMMENT "Generated built-in resources"
+    DEPENDS ${builtin_dependencies_list}
+    VERBATIM  
+  )
 endfunction()
 
-set(irr_builtin_resource_paths PARENT_SCOPE
-    "irr/builtin/materials/lambertian/singletexture/specializedshader.vert"
-    "irr/builtin/materials/lambertian/singletexture/specializedshader.frag"
-    "irr/builtin/materials/lambertian/no_texture/specializedshader.vert"
-    "irr/builtin/materials/lambertian/no_texture/specializedshader.frag")
+set(irr_resources_to_embed
+  "irr/builtin/materials/lambertian/singletexture/specializedshader.vert"
+  "irr/builtin/materials/lambertian/singletexture/specializedshader.frag"
+  "irr/builtin/materials/lambertian/no_texture/specializedshader.vert"
+  "irr/builtin/materials/lambertian/no_texture/specializedshader.frag" 
+  PARENT_SCOPE)
 
