MT for RelWithDebInfo

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -59,12 +59,13 @@ if (MSVC)
 else()
 	set(ZLIB_BINARY_DIR_DEBUG ${ZLIB_BINARY_DIR})
 	set(ZLIB_BINARY_DIR_RELEASE ${ZLIB_BINARY_DIR})
+	#set(ZLIB_BINARY_DIR_RELWITHDEBINFO ${ZLIB_BINARY_DIR})
 	get_target_property(ZLIB_NAME zlibstatic "OUTPUT_NAME")
 	set(ZLIB_DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
 	set(ZLIB_RELWITHDEBINFO_POSTFIX "${CMAKE_RELWITHDEBINFO_POSTFIX}") # check it!
 endif()
 get_target_property(ZLIB_DEBUG_POSTFIX zlibstatic "DEBUG_POSTFIX")
-get_target_property(ZLIB_RELWITHDEBINFO_POSTFIX zlibstatic "RELWITHDEBINFO_POSTFIX")
+set(ZLIB_RELWITHDEBINFO_POSTFIX "rwdi")
 set(ZLIB_INCLUDE_DIR "${THIRD_PARTY_SOURCE_DIR}/zlib;${THIRD_PARTY_BINARY_DIR}/zlib" CACHE STRING "" FORCE)
 set(ZLIB_LIBRARY_DEBUG "${ZLIB_BINARY_DIR_DEBUG}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${ZLIB_DEBUG_POSTFIX}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
 set(ZLIB_LIBRARY_RELEASE "${ZLIB_BINARY_DIR_RELEASE}/${CMAKE_STATIC_LIBRARY_PREFIX}${ZLIB_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX}" CACHE STRING "" FORCE)
@@ -324,6 +325,11 @@ if (IRR_BUILD_CEGUI)
 		DESTINATION ./debug/include/irr/ext/CEGUI
 		CONFIGURATIONS Debug
 	)
+	install(
+		DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/CEGUI/cegui/cegui/include/CEGUI
+		DESTINATION ./relwithdebinfo/include/irr/ext/CEGUI
+		CONFIGURATIONS RelWithDebInfo
+	)
 	# CEGUI generated headers
 	install(
 		DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/CEGUI/cegui/cegui/include/CEGUI
@@ -335,6 +341,11 @@ if (IRR_BUILD_CEGUI)
 		DESTINATION ./debug/include/irr/ext/CEGUI
 		CONFIGURATIONS Debug
 	)
+	install(
+		DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/CEGUI/cegui/cegui/include/CEGUI
+		DESTINATION ./relwithdebinfo/include/irr/ext/CEGUI
+		CONFIGURATIONS RelWithDebInfo
+	)
 	# CEGUI libs
 	install(
 		DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/CEGUI/cegui/lib/
@@ -345,6 +356,11 @@ if (IRR_BUILD_CEGUI)
 		DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/CEGUI/cegui/lib/
 		DESTINATION ./debug/lib/irr/ext/CEGUI
 		CONFIGURATIONS Debug
+	)
+	install(
+		DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/CEGUI/cegui/lib/
+		DESTINATION ./relwithdebinfo/lib/irr/ext/CEGUI
+		CONFIGURATIONS RelWithDebInfo
 	)
 endif()
 
