--- a/source/Irrlicht/CMakeLists.txt
+++ b/source/Irrlicht/CMakeLists.txt
@@ -355,72 +355,38 @@ add_library(Irrlicht STATIC
 
 if(MSVC)
 
-set_property(TARGET Irrlicht PROPERTY
+set(IRR_TARGETS Irrlicht
+				lzma
+				lz4
+				aesGladman
+				spirv_cross
+				png_static
+				zlibstatic
+				shaderc_util
+				shaderc
+				jpeg
+				Imath
+				IlmThread
+				IlmImf
+				Half
+				convert_utf
+				bzip2
+				HLSL			
+				glslang
+				OGLCompiler 
+				OSDependent
+				SPIRV 
+				Iex
+				IexMath
+				SPIRV-Tools
+				SPIRV-Tools-opt )
+		
+			#TODO: targets must be appended to the list depending on build options
+foreach(trgt IN LISTS IRR_TARGETS)
+		set_property(TARGET ${trgt} PROPERTY
              MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET lzma PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET lz4 PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endforeach()
 
-set_property(TARGET aesGladman PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-
-set_property(TARGET spirv_cross PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-
-set_property(TARGET png_static PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-
-set_property(TARGET zlibstatic PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-
-set_property(TARGET shaderc_util PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET shaderc PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET jpeg PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET Imath PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET IlmThread PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET IlmImf PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET Half PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET convert_utf PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET convert_utf PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET bzip2 PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET HLSL PROPERTY
-			MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			
-set_property(TARGET glslang PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET OGLCompiler PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET OSDependent PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
-set_property(TARGET SPIRV PROPERTY
-             MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-			 
 endif()
 
 add_dependencies(Irrlicht openssl_build)
