add last missing builtin shaders, and fix tiny compile error

--- a/src/irr/builtin/CMakeLists.txt
+++ b/src/irr/builtin/CMakeLists.txt
@@ -19,6 +19,10 @@ set(irr_resources_to_embed
   "irr/builtin/specializedshaders/fullscreentriangle.vert"
   "irr/builtin/materials/lambertian/singletexture/specializedshader.vert"
   "irr/builtin/materials/lambertian/singletexture/specializedshader.frag"
+  "irr/builtin/materials/debug/vertex_color/specializedshader.vert"
+  "irr/builtin/materials/debug/vertex_normal/specializedshader.vert"
+  "irr/builtin/materials/debug/vertex_normal/specializedshader.frag"
+  "irr/builtin/materials/debug/vertex_uv/specializedshader.frag"
   "irr/builtin/glsl/broken_driver_workarounds/amd.glsl"
   "irr/builtin/glsl/colorspace/EOTF.glsl"
   "irr/builtin/glsl/colorspace/OETF.glsl"
