geom shader part 1/n

--- a/src/irr/builtin/CMakeLists.txt
+++ b/src/irr/builtin/CMakeLists.txt
@@ -65,5 +65,6 @@ set(irr_resources_to_embed
   "irr/builtin/glsl/ext/LumaMeter/common.glsl"
   "irr/builtin/glsl/ext/LumaMeter/impl.glsl"
   "irr/builtin/glsl/ext/ToneMapper/operators.glsl"
+  "irr/builtin/shaders/testGeomShader.geom"
   PARENT_SCOPE)
 
