--- a/ext/MitsubaLoader/CMakeLists.txt
+++ b/ext/MitsubaLoader/CMakeLists.txt
@@ -20,6 +20,7 @@ set(IRR_EXT_MITSUBA_LOADER_H
 	ParserUtil.h
 	CSerializedLoader.h
 	CMitsubaLoader.h
+	CMitsubaMaterialCompilerFrontend.h
 )
 
 set(IRR_EXT_MITSUBA_LOADER_SRC
@@ -38,6 +39,7 @@ set(IRR_EXT_MITSUBA_LOADER_SRC
 	ParserUtil.cpp
 	CSerializedLoader.cpp
 	CMitsubaLoader.cpp
+	CMitsubaMaterialCompilerFrontend.cpp
 )
 
 set(IRR_EXT_MITSUBA_LOADER_EXTERNAL_INCLUDE
