--- a/.github/workflows/repo_mirroring_workflow.yml
+++ b/.github/workflows/repo_mirroring_workflow.yml
@@ -18,3 +18,4 @@ jobs:
         source_repo: "buildaworldnet/IrrlichtBAW"
         source_branch: "master"
         destination_branch: "master_irrlichtbaw"
+        github_token: ${{ secrets.GITHUB_TOKEN }}
