--- a/.github/workflows/repo_mirroring_workflow.yml
+++ b/.github/workflows/repo_mirroring_workflow.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   repo-sync:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
       with:
