--- a/src/irr/CMakeLists.txt
+++ b/src/irr/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Copyright (C) 2018-2020 - DevSH Graphics Programming Sp. z O.O.
+# This file is part of the "Nabla Engine".
+# For conditions of distribution and use, see copyright notice in nabla.h
 
 find_package(OpenGL REQUIRED)
 if(UNIX)
